--- a/public/app/components/header/navbar/userMenu/userMenu.component.html
+++ b/public/app/components/header/navbar/userMenu/userMenu.component.html
@@ -7,7 +7,7 @@
       <ul class="dropdown-menu">
         <li><a href="" ng-click="$ctrl.profile()"><span class="glyphicon glyphicon-home"></span> Personal Profile</a></li>
         <li><a href="" ng-click="$ctrl.workitems()"><span class="glyphicon glyphicon-list"></span> Work Items</a></li>
-        <li><a href=""><span class="glyphicon glyphicon-eye-open"></span> Admin Panel</a></li>
+        <!-- <li><a href=""><span class="glyphicon glyphicon-eye-open"></span> Admin Panel</a></li> -->
         <li role="separator" class="divider"></li>
         <li><a href="" ng-click="$ctrl.logOut()"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
       </ul>
